--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DB_CONNECT = mongodb+srv://m-abouelsadat:<password>@authentication-iesu5.mongodb.net/test?retryWrites=true&w=majority
+DB_CONNECTT = mongodb+srv://m-abouelsadat:Mm3596982@authentication-iesu5.mongodb.net/test?retryWrites=true&w=majority
 TOKEN_SECRET = dsakdbaskdbaskdvbaskfvaskfvas
